Changing HelloPerson to use fluent